--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kenda Alsaqqa | Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <link rel="stylesheet" href="static/style.css">
-  <link rel="icon" type="image/png" href="static/images/k.png">
+  <link rel="icon" type="image/png" href="/repo-name/static/images/k.png">
 </head>
 <body>
 
